# honu

./: honu.cabal
app/: Config.hs  Main.hs
src/: Regular.hs
src/Regular/: Dotty.hs  Expr.hs  Parse.hs  Pretty.hs
