cabal-version:   3.0
name:            honu
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

common exts
    default-language:   GHC2021

    default-extensions: ApplicativeDo
                      , DerivingVia
                      , FunctionalDependencies
                      , LambdaCase
                      , NamedFieldPuns
                      , OverloadedStrings
                      , RecordWildCards
                      , TypeFamilies

common deps
    build-depends:    base ^>=4.18.0.0
                    , bytestring
                    , containers
                    , mtl
                    , recursion-schemes
                    , safe-exceptions
                    , text
                    , transformers
                    , unordered-containers
                    , vector

common opts
    ghc-options: -haddock
    
library
    import:           deps
                    , exts
                    , opts
                    , warnings

    build-depends:    charset
                    , megaparsec
                    , semirings 
    
    exposed-modules:  Regular
                    , Regular.Expr
                    , Regular.Parse

    hs-source-dirs:   src
    
executable honu
    import:           deps
                    , exts
                    , opts
                    , warnings

    build-depends:    honu
                    , megaparsec
                    , optparse-applicative

    main-is:          Main.hs
    other-modules:    Config

    hs-source-dirs:   app
